Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -144,7 +144,7 @@
 information are moved around the Internet. This amount is expected to grow
 to \textbf{232 petabytes/month by 2021}. 
 
-Thanks to the popularization of \textbf{managed cloud computing services}, many big data tools have become easier to use. \textbf{Managed SQL engines for large non-structured datasets} are an example as it allows us to perform OLAP queries without having to support large and complex infrastructure designs. Thanks to all this we can start to head back to the pre-NoSQL query types without the maintenance issues of NoSQL infrastructure.
+Thanks to the popularization of \textbf{managed cloud computing services}, many big data tools have become easier to use. \textbf{Managed SQL engines for large non-structured datasets} are an example as they allow us to perform OLAP queries without having to support large and complex infrastructure designs. Thanks to all this we can start to head back to the pre-NoSQL query types without the maintenance issues of NoSQL infrastructure.
 \end{exampleblock}
 \begin{exampleblock}{Motivation}
 At Project EPIC most work has been based on 2 monolith apps: \textbf{EPIC Collect}\cite{schram2012mysql} and \textbf{EPIC Analyze}\cite{anderson2015design}. Due to recent issues with campus hosting service and lack of maintenance, these apps went offline. The lack of knowledge about the systems made it difficult to fully recover. The data was saved, but the collecting and analysis software was not.
